kubernetes/core/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: infrastructure
spec:
  hostnames:
    - hubble.vzkn.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
